# VRC-2021-Phase-II

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt  reset_usb.sh  setup.sh
.github/workflows/: build.yml  containers.yml  mavlink.yml
GUI/: app.py  requirements.txt
VMC/flight_control_module/: fcc.py
custom_mavlink/: generate.sh  hil_gps_heading_v1.10.2.patch
dev/: actuator.py  format.sh
mavlink/: generate.sh  hil_gps_heading_v1.12.0.patch  hil_gps_heading_v1.12.1.patch  vrc_params.params
mqtt/: install.sh  start.sh  stop.sh
vmc/apriltag_module/: Dockerfile  README.md  apriltag_library.py  capture_device.py  notes.txt  requirements.txt  start_module.sh  vrcapriltag.py
vmc/apriltag_module/c/: CMakeLists.txt  apriltags.hpp  cam_properties.hpp  compile.txt  undistort.cpp  undistort.hpp  vrcapriltags.cpp  vrcapriltags_old
vmc/apriltag_module/c/NVapriltags/NvidiaApriltags/: compile.txt  vrcapriltags.cpp
vmc/apriltag_module/c/NVapriltags/NvidiaApriltags/nvapriltags/: nvAprilTags.h
vmc/apriltag_module/c/src/: apriltags.cpp  apriltags.hpp  vrcapriltags.cpp
vmc/apriltag_module/python/: apriltag_processor.py  capture_device.py  cpu_apriltag_library.py  requirements.txt  vrcapriltag.py
vmc/flight_control_module/: Dockerfile  fcc.py  fcc_library.py  requirements.txt  simple_test.py
vmc/flight_control_module/mavlink/: bell.lua  bell.py  common.lua  common.py  minimal.lua  minimal.py  update.sh
vmc/fusion_module/: Dockerfile  fusion.py  requirements.txt
vmc/peripheral_control_module/: Dockerfile  pcc.py  pcc_library.py
vmc/realsense_module/: t265.py
vmc/vio_module/: Dockerfile  requirements.txt  t265_library.py  vio.py  vio_library.py
vmc2/flight_control_module/: fcc.py
vrc_sandbox/: Dockerfile  actuator.py  docker-entrypoint.sh  sandbox.py
